[tool.mypy]
python_version = 3.8
warn_unused_configs = true
strict = true
show_error_codes = true
show_column_numbers = true
warn_no_return = false
no_implicit_optional = false

[[tool.mypy.overrides]]
module = 'multibar.discord.embed'
strict_optional = false

[[tool.mypy.overrides]]
module = 'multibar.inheritance'
disallow_untyped_defs = false


[tool.black]
line-length = 110
target-version = ['py38']
include = '\.pyi?$'


[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
